Basic bg styles + auto-fill grid w/ max # square divs
-NB: if actually load rn, document looks very silly --> can turn off
     border on 'dot' divs to remove red grid.

-Also, the dots are squares for now, for which I am sorry, but we are
 taking care of the (decorative) CSS in the next commit.

-Explanations:
1.) index.html
  a. Edit font link: nix Open Sans, add Righteous.
  b. Add comments noting qualities/writing out names of various Google
     fonts. (From picking title font, but leaving b/c still useful
     given prototype nature.)
  c. Add div to hold 'dots', w/ 1 starter dot inside.

2.) style.css/style.scss
  a. Center title text on page; assign font styles.
  b. Set a background gradient.
  c. Make 'dot container' a grid with...
    i. as many columns as it can fit, provided they're all the same
       width *and* are all greater than or equal to 60px.
   ii. an indeterminate number of rows. (Enter JS.)
  d. Make each grid item's width and height 100% of the available space.
     (Grid items = 'dots'.)

3.) main.js
  a. Split grid into squares: set each row of the dot container equal to
     the calculated width of each column in the grid. ('Dot' div is now
     square, since height/width are 100% of grid item space.)
  b. Calculate the number of rows and columns there will be, based on
     the column width and height/width of container (which is entire
     viewport).
  c. Fill grid using 'for' loop that appends a clone of the original
     'dot' to the dot container X times, where X = rows * columns.

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -5,13 +5,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Homepage</title>
-	<link href="https://fonts.googleapis.com/icon?family=Open+Sans:200,400,700|Raleway:200,400,700|Inconsolata:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Raleway:200,400,700|Inconsolata:400,700|Righteous|Bungee+Inline" rel="stylesheet">
+	<!-- Good options: Supermercado+One (blocky/70s), Poiret+One (thin deco, 1 style), Righteous* (70s/geometric, 1 style), Prompt (wider Open Sans-ish, mannny styles), Quantico:400,700 (workbench-y, esp 700), Jockey+One (ibid, 1 style), Space+Mono:400,700 (Inconsolata competitor), Work+Sans (Open Sans w/ lil curls), Bungee+Inline -->
+	<!-- Notes: Righteous +1 w/ span, Jockey One too masculine, Quantico looks like football jerseys, -->
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="home-grid-wrapper">
 		<div class="home-title-wrapper">
 			<div class="home-title__text"><span>The </span>Scholars' Lab</div>
+		</div>
+		<div class="home-dots-wrapper">
+			<div class="home-dots__dot"></div>
+		</div>
 	</div>
 
 	<script src="main.js" type="text/javascript" charset="utf-8"></script>
