Update: the dots now look like dots instead of squares

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -16,7 +16,7 @@
 			<div class="home-title__text"><span>The </span>Scholars' Lab</div>
 		</div>
 		<div class="home-dots-wrapper">
-			<div class="home-dots__dot"></div>
+			<div class="home-dots__dot"><span></span></div>
 		</div>
 	</div>
 
