Move main.js to a JS folder; update HTML <script> link w/ it

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -20,7 +20,7 @@
 		</div>
 	</div>
 
-	<script src="main.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 	<script src="https://hammerjs.github.io/dist/hammer.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
