Create div to hold background styles for topnav

--- a/theme-testing/navbar.html
+++ b/theme-testing/navbar.html
@@ -13,6 +13,7 @@
 <body>
 
 	<nav class="include--topnav"> <!-- "include" on all outermost class names of _include components; internal class names should just reference the colloquial component name -->
+		<div class="topnav__background"></div>
 		<div class="topnav__content-wrapper">
 			<div class="topnav-item">
 				<a class="topnav-item__link" href="#" aria-label="Scholars' Lab icon as home link"><img src="img/basic-constellation.svg" alt="Scholars' Lab icon"></a>
