Add new semantic section divs (not ordered)

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -20,6 +20,23 @@
 		</div>
 	</div>
 
+	<div class="home__hero-text">hero-text</div>
+	<div class="home__contact-link-1">contact-link-1</div>
+	<div class="home__faq-link">faq-link</div>
+	<div class="home__charter-link">charter-link</div>
+	<div class="home__office-hours">office-hours</div>
+	<div class="home__floor-diagram">floor-diagram</div>
+	<div class="home__gis-corner">gis-corner</div>
+	<div class="home__makerspace-corner">makerspace-corner</div>
+	<div class="home__grads">grads</div>
+	<div class="home__events">events</div>
+	<div class="home__learn">learn</div>
+	<div class="home__blog">blog</div>
+	<div class="home__staffer-projects">staffer-projects</div>
+	<div class="home__contact-link-2">contact-link-2</div>
+	<div class="home__listserv-prompt">listserv-prompt</div>
+	<div class="home__people">people</div>
+	<div class="home__origin-stories">origin-stories</div>
 	
 
 	<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
