Change class for naming consistency

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -134,7 +134,7 @@
 			<div class="home-projects__content"><span>See what our staff is passionate about.</span><a href="#" aria-label="Staffer projects home">Insert link words.</a></div>
 		</div>
 
-		<div class="home__contact-link-2" title="SLab casual: just shirt, shoes, & curiosity required">
+		<div class="home__contact--2" title="SLab casual: just shirt, shoes, & curiosity required">
 			<div class="home-contact2__title">Let's meet up.</div>
 			<div class="home-contact2__content">Come set up a <a href="#">consultation</a> with us. Very casual. Something something if you have a project and wanna fit DH into it, or something something no pressure other reason. <span>Just fill out the form found <a href="#">here</a>.</div>
 		</div>
