Light edits and delete comments

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -20,19 +20,7 @@
 		</div>
 	</div>
 
-	<div class="home-main-content"> <!-- 17 divs 
-
-	"hero hero"
-						 "faq contact"
-						 "faq grads"
-						 "floor hours"
-						 "make gis"
-						 "learn learn"
-						 "events events"
-						 "listserv contact2"						 
-						 "people people"
-						 "blog projects"						 
-						 "origins charter";-->
+	<div class="home-main-content">
 		<div class="home__hero">
 			<div class="home-hero__text--1" title="And our Soylent is not.">At the Scholars' Lab, digital humanities is people.</div>
 			<div class="home-hero__text--2">Our most important digital humanities project is our community of scholars: mentors, learners, researchers, teachers, crafters and makers, collaborators.</div>
@@ -94,18 +82,6 @@
 			<div class="home-learn__links"><a href="#">Links to a couple of topics here</a></div>
 		</div>
 
-		<!-- 
-	"hero hero"
-						 "faq contact"
-						 "faq grads"
-						 "floor hours"
-						 "make gis"
-						 "learn learn"
-						 "events events"
-						 "listserv contact2"						 
-						 "people people"
-						 "blog projects"						 
-						 "origins charter" -->
 		<div class="home__listserv-prompt">
 			<div class="home-listserv__title" title="Also maybe dogs">Keep up with what we're doing. We'll only send you cool stuff.</div>
 			<div class="home-listserv__content">
@@ -139,11 +115,14 @@
 			<div class="home-contact2__content">Come set up a <a href="#">consultation</a> with us. Very casual. Something something if you have a project and wanna fit DH into it, or something something no pressure other reason. <span>Just fill out the form found <a href="#">here</a>.</div>
 		</div>
 		
-		<div class="home__charter-link">Link to charter. Sets out mission and intention explicitly.</div>
+		<div class="home__charter-link">
+			<div class="home-charter__title">Our Charter</div>
+			<div class="home-charter__content">Link to <a href="#">charter</a>. Sets out mission and intention explicitly.</div>
+		</div>
 
 		<div class="home__colophon">
 			<div class="home-colophon__title">Colophon</div>
-			<div class="home-colophon__content" title="Ingredients, one might say...">How the <s>sausage</s> website gets made.</div>
+			<div class="home-colophon__content" title="Ingredients, one might say...">How the <s>sausage</s>, er, website, gets made. We're pretty proud of the <a href="#" aria-label="Colophon page">ingredients.</a></div>
 		</div>
 	</div>
 
