Change class name for consistency

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -23,7 +23,7 @@
 	<div class="home-main-content">
 		<div class="home__hero">
 			<div class="home-hero__title" title="And our Soylent is not.">At the Scholars' Lab, digital humanities is people.</div>
-			<div class="home-hero__text--2">Our most important digital humanities project is our community of scholars: mentors, learners, researchers, teachers, crafters and makers, collaborators.</div>
+			<div class="home-hero__text">Our most important digital humanities project is our community of scholars: mentors, learners, researchers, teachers, crafters and makers, collaborators.</div>
 			<!-- scroll-y prompt: "So let's explore what that means, because we'd love for you to be a part of it." -->
 		</div>
 
