Wrap hero phrases in span elems

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Homepage</title>
-	<link href="https://fonts.googleapis.com/icon?family=Raleway:200,400,700|Inconsolata:400,700|Righteous|Josefin+Sans:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Raleway:200,400,700,900|Inconsolata:400,700|Righteous" rel="stylesheet">
 	<!-- Good options: Supermercado+One (blocky/70s), Poiret+One (thin deco, 1 style), Righteous* (70s/geometric, 1 style), Prompt (wider Open Sans-ish, mannny styles), Quantico:400,700 (workbench-y, esp 700), Jockey+One (ibid, 1 style), Space+Mono:400,700 (Inconsolata competitor), Work+Sans (Open Sans w/ lil curls), Bungee+Inline -->
 	<!-- Notes: Righteous +1 w/ span, Jockey One too masculine, Quantico looks like football jerseys, -->
 	<link rel="stylesheet" href="style.css">
@@ -22,7 +22,7 @@
 
 	<div class="home-main-content">
 		<div class="home__hero">
-			<div class="home-hero__title" title="And our Soylent is not.">At the Scholars' Lab, digital humanities is people.</div>
+			<div class="home-hero__title" title="And our Soylent is not."><span>At the Scholars' Lab,</span> <span>digital<br/>humanities</span> <span>is</span> <span>people.</span></div>
 			<div class="home-hero__text">Our most important digital humanities project is our community of scholars: mentors, learners, researchers, teachers, crafters and makers, collaborators.</div>
 			<!-- scroll-y prompt: "So let's explore what that means, because we'd love for you to be a part of it." -->
 		</div>
