Add structured dummy content in sections up to learning hub

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -32,46 +32,63 @@
 		</div>
 
 		<div class="home__faq">
-			<div class="home-faq__title">FAQs</div>
-			<div class="home-faq__content">example question, link to landing page, maybe a sentence to explain</div>
+			<div class="home-faq__title"><a href="#">Frequently Asked Questions</a></div>
+			<div class="home-faq__content">
+				<div class="home-faq__subtitle">A round-up of some questions about the Scholars' Lab that we encounter most.</div>
+				<div class="home-faq__questions">
+					<div><a href="#">What is digital humanities?</a></div>
+					<div><a href="#">How does the Scholars' Lab fit with what you're doing?</a></div>
+					<div><a href="#">How does the Lab fit into to the University of Virginia Library system?</a></div>
+				</div>
+				<div class="home-faq__cta">Find answers to these questions and more <a href="#">here</a>.</div>
+			</div>
 		</div>
 
+		<!-- example: A round-up of some questions about the Scholars' Lab that we encounter most. What is digital humanities? How does the Scholars' Lab fit with what you're doing? How do we connect to the University of Virginia Library system? Find answers to that and more <a>here</a>. -->
+
 		<div class="home__contact--1">
-			<div class="home-contact__cta">Curious about experimental & digital humanities research & teaching? <a href="#">Click here</a> to join our community&mdash;absolutely zero experience needed.</div>
+			<div class="home-contact__title">Contact Us</div>
+			<div class="home-contact__cta">Curious about experimental & digital humanities research & teaching? <a href="#">Click here</a> to join our community&mdash;absolutely zero experience needed.</div> <!-- should link to contact page -->
 		</div>
 
 		
 		<div class="home__grads">
 			<div class="home-grads__title">Opportunities for Graduate Students</div>
-			<div class="home-grads__content">links to programs, etc; any explain-y text @Brandon wants, link to grad home page type thing</div>
+			<div class="home-grads__content">
+				<div class="home-grads__subtitle">One of our primary missions is to support the work of emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students. Something about variety of opportunities, or whatever Brandon ends up writing. This section explores all the opportunities we offer to graduate students, from our fancy <a href="#">Praxis Program</a> to <a href="#">fellowships</a> I don't know all the names of.</div>
+				<div class="home-grads__cta"><a href="#">Grad Opportunities Home</a></div>
+			</div>
 		</div>
 		
 
 		<div class="home__office-hours">
 			<div class="home-hours__title">Open Office Hours</div>
 			<div class="home-hours__when">Every Monday, 10am-11:30am.</div>
-			<div class="home-hours__info">Located in the Scholars' Lab Common Room. Description, note of diagram for where that is, come talk about dogs</div>
+			<div class="home-hours__info">Located in the Scholars' Lab Common Room. Description, note of diagram for where that is, come talk about dogs. (See diagram for where we are!)</div>
 		</div>
 
 		<div class="home__floor-diagram">
 			<div class="home-diagram__title">Our Spaces: A Diagram</div>
 			<!--span>Because no one was born knowing where a common room is.</span-->
 			<div class="home-diagram__content">
-				<img src="" alt="Floor diagram of Scholars' Lab spaces" title="By the lovely Beth Mitchell">
+				<img src="img/dummy-floor-plan.png" height="300px" alt="Floor diagram of Scholars' Lab spaces" title="By the lovely Beth Mitchell">
 			</div>
 		</div>
 		
 		<div class="home__makerspace-corner">
 			<div class="home-makerspace__title">Makerspace</div>
-			<div class="home-makesrpace__content">
-				<div>Insert short description, a pic, and event preview, or whatever @Shane et al. find useful</div>
+			<div class="home-makerspace__content">
+				<div class="home-makerspace__text"><!-- Insert short description, a pic, and event preview, or whatever @Shane et al. find useful -->The Scholars’ Lab Makerspace is a place for tinkering and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.
+				Find things like 3-D printing, wearable technologies, physical computing, & more.</div>
+				<div class="home-makerspace__hours"><span>Staffed Hours:</span>Mondays: 1-7pm<br/>Tuesdays: 1-9pm<br/>Wednesday: 1-7pm<br/>Thursday: 1-9pm<br/>Friday: 1-5pm</div>
+				<div class="home-makerspace__cta"><a href="#">Makerspace Home</a></div>
 			</div>
 		</div>
 
 		<div class="home__gis-corner">
 			<div class="home-gis__title">Spatial Technologies</div>
 			<div class="home-makesrpace__content">
-				<div>Insert short description, a pic, and event preview, or whatever @Will/Arin/Drew/Chris et al. find useful</div>
+				<div><strong>Who should do this part?</strong>Insert short description, a pic, and event preview, or whatever @Will/Arin/Drew/Chris et al. find useful. GIS, VR/AR, 3-D modeling, other things?</div>
 			</div>
 		</div>
 		
@@ -83,7 +100,12 @@
 		<div class="home__learn">
 			<div class="home-learn__title">Learning Resources: Our Starter Kits</div>
 			<div class="home-learn__content">Insert description of why these exist, and why you might wanna use them. Maybe you don't even know you're interested in DH yet, or want to check out the basics of web design before you come talk to us. Curated by our in-house experts on each topic.</div>
-			<div class="home-learn__links"><a href="#">Links to a couple of topics here</a></div>
+			<div class="home-learn__links">
+				<a href="#">Links to a couple of topics here</a>
+				<div class="home-learn__link--1">topic 1 box</div>
+				<div class="home-learn__link--2">topic 1 box</div>
+				<div class="home-learn__link--3">topic 1 box</div>
+			</div>
 		</div>
 
 		<div class="home__listserv-prompt">
