Change location of link in FAQ section

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -32,7 +32,7 @@
 		</div>
 
 		<div class="home__faq">
-			<div class="home-faq__title"><a href="#">Frequently Asked Questions</a></div>
+			<div class="home-faq__title">Frequently Asked Questions</div>
 			<div class="home-faq__content">
 				<div class="home-faq__subtitle">A round-up of some questions about the Scholars' Lab that we encounter most.</div>
 				<div class="home-faq__questions">
@@ -40,7 +40,7 @@
 					<div><a href="#">How does the Scholars' Lab fit with what you're doing?</a></div>
 					<div><a href="#">How does the Lab fit into to the University of Virginia Library system?</a></div>
 				</div>
-				<div class="home-faq__cta">Find answers to these questions and more <a href="#">here</a>.</div>
+				<div class="home-faq__cta">Find answers to these questions and more. <a href="#">FAQ Home</a></div>
 			</div>
 		</div>
 
