Change location of subtitle
-Move "At the Scholars' Lab" to second intro sentence
-Move "Digital humanities is people" to landing page (is now visible on
load).

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -15,6 +15,7 @@
 		<div class="home-title-wrapper">
 			<div class="home-title__text">The<br/>Scholars'<br/>Lab</div>
 		</div>
+		<div class="home-landing__subtitle">Digital humanities is people.</div>
 		<!--div class="home-dots-wrapper">
 			<div class="home-dots__dot"><span></span></div>
 		</div-->
@@ -22,12 +23,12 @@
 
 	<div class="home-main-content">
 		<div class="home__hero">
-			<div class="home-hero__title" title="And our Soylent is not.">
-				<span>At the Scholars' Lab,</span><br/>
+			<!--div class="home-hero__title" title="And our Soylent is not.">
+				<!--span>At the Scholars' Lab,</span><br/>
 				<span>digital humanities</span>
 				<span>is people.</span>
-			</div>
-			<div class="home-hero__text">Our most important digital humanities <span class="if-big"><br/></span>project is our community of scholars: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span></div>
+			</div-->
+			<div class="home-hero__text">At the Scholars' Lab, our most important digital humanities <span class="if-big"><br/></span>project is our community of scholars: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span></div>
 			<!-- scroll-y prompt: "So let's explore what that means, because we'd love for you to be a part of it." -->
 		</div>
 
