--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -15,7 +15,7 @@
 		<div class="home-title-wrapper">
 			<div class="home-title__text">The<br/>Scholars'<br/>Lab</div>
 		</div>
-		<div class="home-landing__subtitle">Digital humanities is people.</div>
+		<div class="home-landing__subtitle">Digital humanities is <span class="colorchange">people</span>.</div>
 		<!--div class="home-dots-wrapper">
 			<div class="home-dots__dot"><span></span></div>
 		</div-->
@@ -28,18 +28,19 @@
 				<span>digital humanities</span>
 				<span>is people.</span>
 			</div-->
-			<div class="home-hero__text">At the Scholars' Lab, our most important digital humanities <span class="if-big"><br/></span>project is our community of scholars: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span> This site hopes to explore what that means, because we'd love for you to be a part of it.</div>
+			<div class="home-hero__text">At the Scholars' Lab, our most important digital humanities <span class="if-big"><br/></span>project is our community of scholars: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span> Come help us explore what that means—we'd love you to be a part of our community.</div>
 		 <!-- "So let's explore what that means, because we'd love for you to be a part of it." -->
 		</div>
 
 		<div class="home__faq">
 			<div class="home-faq__title">Frequently Asked Questions</div>
 			<div class="home-faq__content">
-				<div class="home-faq__subtitle">A round-up of some questions about the Scholars' Lab that we encounter most.</div>
+				<div class="home-faq__subtitle">Curious about digital humanities and the Scholars' Lab? Check out answers to common questions:</div>
 				<div class="home-faq__questions">
-					<div><a href="#">What is digital humanities?</a></div>
-					<div><a href="#">How does the Scholars' Lab fit with what you're doing?</a></div>
-					<div><a href="#">How does the Lab fit into to the University of Virginia Library system?</a></div>
+					<div><a href="#">What is digital humanities (DH)?</a></div>
+					<div><a href="#">What is the Scholars' Lab??</a></div>
+					<div><a href="#">How can the Scholars' Lab fit into my work?</a></div>
+					<div><a href="#">How does the Lab fit into the UVA Library?</a></div>
 				</div>
 				<div class="home-faq__cta">Find answers to these questions and more. <a href="#">FAQ Home</a></div>
 			</div>
@@ -49,14 +50,14 @@
 
 		<div class="home__contact--1">
 			<div class="home-contact__title">Contact Us</div>
-			<div class="home-contact__cta">Curious about experimental & digital humanities research & teaching? <a href="#">Click here</a> to join our community&mdash;absolutely zero experience needed.</div> <!-- should link to contact page -->
+			<div class="home-contact__cta">Curious about experimental & digital humanities research & teaching? <a href="#">Click here</a> to discover ways to join our community&mdash;absolutely zero DH experience needed.</div> <!-- should link to contact page -->
 		</div>
 
 		
 		<div class="home__grads">
 			<div class="home-grads__title">Opportunities for Graduate Students</div>
 			<div class="home-grads__content">
-				<div class="home-grads__subtitle">One of our primary missions is to support the work of emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students. Something about variety of opportunities, or whatever Brandon ends up writing. This section explores all the opportunities we offer to graduate students, from our fancy <a href="#">Praxis Program</a> to <a href="#">fellowships</a> I don't know all the names of.</div>
+				<div class="home-grads__subtitle">One of our primary goals is supporting emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students. Something about variety of opportunities, or whatever Brandon ends up writing. This section explores all the opportunities we offer to graduate students, from our <a href="#">Praxis Program</a> annual DH graduate fellow team and other <a href="#">fellowships</a> to <a href="#">informal mentorship opportunities</a>.</div>
 				<div class="home-grads__cta"><a href="#">Grad Opportunities Home</a></div>
 			</div>
 		</div>
@@ -64,8 +65,8 @@
 
 		<div class="home__office-hours">
 			<div class="home-hours__title">Open Office Hours</div>
-			<div class="home-hours__when">Every Monday, 10am-11:30am.</div>
-			<div class="home-hours__info">Located in the Scholars' Lab Common Room. Description, note of diagram for where that is, come talk about dogs. (See diagram for where we are!)</div>
+			<div class="home-hours__when">Every Monday during fall and spring term, 10am-11:30am.</div>
+			<div class="home-hours__info">Stop by the discussion area just inside the Scholars' Lab Common Room to chat with our DH experts about your ideas, from your earliest questions and broad ideas through formal projects. (See diagram for where we are!)</div>
 		</div>
 
 		<div class="home__floor-diagram">
@@ -80,7 +81,7 @@
 			<div class="home-makerspace__title">Makerspace</div>
 			<div class="home-makerspace__content">
 				<div class="home-makerspace__text"><!-- Insert short description, a pic, and event preview, or whatever @Shane et al. find useful -->The Scholars’ Lab Makerspace is a place for tinkering and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.
-				Find things like 3-D printing, wearable technologies, physical computing, & more.</div>
+				Find things like 3-D printing, wearable technologies, physical computing, & more at our space <a href="#">in the middle of the Scholars' Lab Common Area</a>.</div>
 				<div class="home-makerspace__hours"><span>Staffed Hours:</span>Mondays: 1-7pm<br/>Tuesdays: 1-9pm<br/>Wednesday: 1-7pm<br/>Thursday: 1-9pm<br/>Friday: 1-5pm</div>
 				<div class="home-makerspace__cta"><a href="#">Makerspace Home</a></div>
 			</div>
@@ -89,28 +90,29 @@
 		<div class="home__gis-corner">
 			<div class="home-gis__title">Spatial Technologies</div>
 			<div class="home-makesrpace__content">
-				<div><strong>Who should do this part?</strong>Insert short description, a pic, and event preview, or whatever @Will/Arin/Drew/Chris et al. find useful. GIS, VR/AR, 3-D modeling, other things?</div>
+				<div><strong>Experts at thinking about space+time.</strong>We've got experts in GIS and other mapping approaches (including our own Neatline project for telling stories that combine timelines+maps), cultural heritage informatics, augmented reality, virtual reality, 3D modeling, photogrammetry and scanning, aerial footage, and more (e.g. workshops, job opportunities, internships)Insert short description, a pic, and event preview, or whatever @Will/Arin/Drew/Chris et al. find useful here; update list of stuff supported above to be accurate.</div>
 			</div>
 		</div>
 		
 		<div class="home__events">
 			<div class="home-events__title">Events</div>
-			<div class="home-events__description">One-time or standing, hands-on workshops and symposiums, a quick intro or community group&mdash;whatever's your flavor, we probably have an event for it. Upcoming events below, or find the full list <a href="#" aria-label="Events page">here</a>.</div>
+			<div class="home-events__description">One-time or regular, hands-on workshops and discussion-rich symposia, a quick intro or community group&mdash;whatever your flavor, we probably have an event for it. Upcoming events below, or find the full list <a href="#" aria-label="Events page">here</a>.</div>
 		</div>
 
 		<div class="home__learn">
 			<div class="home-learn__title">Learning Resources: Our Starter Kits</div>
-			<div class="home-learn__content">Insert description of why these exist, and why you might wanna use them. Maybe you don't even know you're interested in DH yet, or want to check out the basics of web design before you come talk to us. Curated by our in-house experts on each topic.</div>
+			<div class="home-learn__content">Starter kits contain example projects, novice-friendly explainers and tutorials, and other hints for dipping your toes into a DH method or figuring out what method you want to learn. Maybe you don't even know you're interested in DH yet, or want to check out the basics of mapping or web design before you come talk to us. Curated by our in-house experts on each topic.</div>
 			<div class="home-learn__links">
-				<a href="#">Links to a couple of topics here</a>
-				<div class="home-learn__link--1">topic 1 box</div>
-				<div class="home-learn__link--2">topic 1 box</div>
-				<div class="home-learn__link--3">topic 1 box</div>
+				<a href="#">Peruse all starter kits</a> or check out our most popular resources:
+				<div class="home-learn__link--1">What are networks and why might I care?</div>
+				<div class="home-learn__link--2">Sustainable web projects</div>
+				<div class="home-learn__link--3">Getting the text for your digital text project</div>
+				<div class="home-learn__link--4">You can also <a href="#">request a starter kit</a> around a topic we haven't covered yet.</div>
 			</div>
 		</div>
 
 		<div class="home__listserv-prompt">
-			<div class="home-listserv__title" title="Also maybe dogs">Keep up with what we're doing. We'll only send you cool stuff.</div>
+			<div class="home-listserv__title" title="Also maybe dogs">Keep up with what we're doing. We'll only send you cool stuff about upcoming events and workshops, grants, and opportunities for collaboration or paid apprenticeships.</div>
 			<div class="home-listserv__content">
 				<div class="home-listserv__input">< insert input tag for entering email ></div>
 				<button class="home-listserv__btn">Keep me in the loop</button>
@@ -119,12 +121,12 @@
 
 		<div class="home__people">
 			<div class="home-people__title">Our People</div>
-			<div class="home-people__content">Like we said, our digital humanities is people. Meet the ones who give this place its soul&mdash;and its abundance of dog memes.<br/><a href="#" aria-label="Link to 'People' page">Find them here.</a></div>
+			<div class="home-people__content">Like we said, our digital humanities is people. Meet the folks who give this place its soul&mdash;and its abundance of dog memes.<br/><a href="#" aria-label="Link to 'People' page">Find them here.</a></div>
 		</div>
 
 		<div class="home__origin-stories">
 			<div class="home-origins__title">Origin Stories</div>
-			<div class="home-origins__content"><span>"How did you... end up in digital humanities?" </span>We've found that most of our answers are closer to a spiral than a straight line. Insert words about some of us started in history or English or econ and tumbled from there, and it's relevant because you the user might be nervous that everyone got there in a straight line. Give a couple of <a href="#">funny hints</a> about anecdotes that link to <a href="#">specific people's</a> pages. Check out the full round-up <a href="#">here</a>.</div>
+			<div class="home-origins__content"><span>"How did you... end up in digital humanities?" </span>Most of our answers are closer to a spiral than a straight line. Insert words about some of us started in history or English or econ and tumbled from there, and it's relevant because you the user might be nervous that everyone got there in a straight line. Give a couple of <a href="#">funny hints</a> about anecdotes that link to <a href="#">specific people's</a> pages. Check out the full round-up <a href="#">here</a>.</div>
 		</div>
 
 		<div class="home__blog">
@@ -144,12 +146,12 @@
 		
 		<div class="home__charter-link">
 			<div class="home-charter__title">Our Charter</div>
-			<div class="home-charter__content">Link to <a href="#">charter</a>. Sets out mission and intention explicitly.</div>
+			<div class="home-charter__content">We do our best to put action into <a href="#">our values</a>, but we can always do better. Read about our mission and help us shape the digital humanities we want to see.</div>
 		</div>
 
 		<div class="home__colophon">
 			<div class="home-colophon__title">Colophon</div>
-			<div class="home-colophon__content" title="Ingredients, one might say...">How the <s>sausage</s>, er, website, gets made. We're pretty proud of the <a href="#" aria-label="Colophon page">ingredients.</a></div>
+			<div class="home-colophon__content" title="Ingredients, one might say...">How the <s>sausage</s>, (er, website) gets made. We're pretty proud of the <a href="#" aria-label="Colophon page">ingredients.</a></div>
 		</div>
 	</div>
 
