--- a/theme-testing/content-index.html
+++ b/theme-testing/content-index.html
@@ -56,7 +56,7 @@
 		<div class="home__grads">
 			<div class="home-grads__title">Student Opportunities</div>
 			<div class="home-grads__content">
-				<div class="home-grads__subtitle">One of our primary missions is to support the work of emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students. We offer a variety of fellowships and opportunities to this end, which collectively aim to support students during the full measure of their time at UVA. Whether you're looking to answer a specific call for applications or looking to discuss your research&mdash;we're here to help.</div>
+				<div class="home-grads__subtitle">One of our primary missions is to support the work of emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students. We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA. From the innovative <a href="praxis.scholarslab.org">Praxis Program</a> to professionalization training for students on the DH job market, we're here to help whether you're looking to answer a specific call for applications or simply looking to discuss your research.</div>
 				<div class="home-grads__cta"><a href="#">Student Opportunities Home</a></div>
 			</div>
 		</div>
