--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -55,10 +55,10 @@
 
 		
 		<div class="home__grads">
-			<div class="home-grads__title">Opportunities for Graduate Students</div>
+			<div class="home-grads__title">Student Opportunities</div>
 			<div class="home-grads__content">
-				<div class="home-grads__subtitle">One of our primary goals is supporting emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students. Something about variety of opportunities, or whatever Brandon ends up writing. This section explores all the opportunities we offer to graduate students, from our <a href="#">Praxis Program</a> annual DH graduate fellow team and other <a href="#">fellowships</a> to <a href="#">informal mentorship opportunities</a>.</div>
-				<div class="home-grads__cta"><a href="#">Grad Opportunities Home</a></div>
+				<div class="home-grads__subtitle">One of our primary missions is to support the work of emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students. We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA. From the innovative <a href="praxis.scholarslab.org">Praxis Program</a> to professionalization training for students on the DH job market, we're here to help whether you're looking to answer a specific call for applications or simply looking to discuss your research.</div>
+				<div class="home-grads__cta"><a href="#">Student Opportunities Home</a></div>
 			</div>
 		</div>
 		
