--- a/theme-testing/content-index.html
+++ b/theme-testing/content-index.html
@@ -26,16 +26,17 @@
 		</div>
 
 		<!-- 2: FAQ -->
-		<!-- Status: fine -->
-		<!-- Issues: page itself doesn't exist, questions need rewording -->
+		<!-- Status: good -->
+		<!-- Issues: page itself doesn't exist -->
 		<div class="home__faq">
 			<div class="home-faq__title">Frequently Asked Questions</div>
 			<div class="home-faq__content">
-				<div class="home-faq__subtitle">A round-up of some questions about the Scholars' Lab that we encounter most.</div>
+				<div class="home-faq__subtitle">Curious about digital humanities and the Scholars' Lab? Check out answers to common questions:</div>
 				<div class="home-faq__questions">
-					<div><a href="#">What is digital humanities?</a></div>
-					<div><a href="#">How does the Scholars' Lab fit with what you're doing?</a></div>
-					<div><a href="#">How does the Lab fit into to the University of Virginia Library system?</a></div>
+					<div><a href="#">What is digital humanities (DH)?</a></div>
+					<div><a href="#">What is the Scholars' Lab??</a></div>
+					<div><a href="#">How can the Scholars' Lab fit into my work?</a></div>
+					<div><a href="#">How does the Lab fit into the UVA Library?</a></div>
 				</div>
 				<div class="home-faq__cta">Find answers to these questions and more. <a href="#">FAQ Home</a></div>
 			</div>
@@ -44,15 +45,15 @@
 		<!-- 3: Contact -->
 		<!-- Status: surface = fine; core = bad -->
 		<!-- Issues: no consensus on what the page links to; if it's not a straightforward contact page we should address where to put one, and if it is, is this wording misleading? Possible solutions include: add another sentence to this that is clearly linking to a straight up contact page, so that "Click here" can reasonably link to a consultation form -->
-		<!-- Content needed: contact form. We need to have a meeting about what specific ways we want people to be able to contact us, and then create appropriate form(s) to make that happen. This is urgent and should happen at the beginning of this coming week (2/5). -->
+		<!-- Content needed: contact form. We need to have a meeting about what specific ways we want people to be able to contact us, and then create appropriate form(s) to make that happen. This is urgent and should happen before or at the beginning of this coming week (2/19). -->
 		<div class="home__contact--1">
 			<div class="home-contact__title">Contact Us</div>
 			<div class="home-contact__cta">Curious about experimental & digital humanities research & teaching? <a href="#">Click here</a> to join our community&mdash;absolutely zero experience needed.</div>
 		</div>
 
 		<!-- 4: Graduate Hub -->
-		<!-- Status: bad -->
-		<!-- Issues: need title of page and written content from Brandon. Should be upgraded from "bad" to "fine/good" by Wednesday (2/7). -->
+		<!-- Status: good -->
+		<!-- Issues: maybe change class name since emphasis changed -->
 		<div class="home__grads">
 			<div class="home-grads__title">Student Opportunities</div>
 			<div class="home-grads__content">
@@ -62,18 +63,16 @@
 		</div>
 
 		<!-- 5: Office Hours -->
-		<!-- Status: fine -->
-		<!-- Issues: vital information is there, but need a sentence describing the purpose of the office hours. Best solution is to ask Amanda or Laura to literally write down a sentence for me, probably just over Slack. -->
-		<!-- NB: this is high priority since it's so easy. -->
+		<!-- Status: good -->
 		<div class="home__office-hours">
 			<div class="home-hours__title">Open Office Hours</div>
-			<div class="home-hours__when">Every Monday, 10am-11:30am.</div>
-			<div class="home-hours__info">Located in the Scholars' Lab Common Room. Description, note of diagram for where that is, come talk about dogs. (See diagram for where we are!)</div>
+			<div class="home-hours__when">Every Monday during fall and spring term, 10am-11:30am.</div>
+			<div class="home-hours__info">Stop by the discussion area just inside the Scholars' Lab Common Room to chat with our DH experts about your ideas, from your earliest questions and broad ideas through formal projects. (See diagram for where we are!)</div>
 		</div>
 
 		<!-- 6: Floor Diagrams -->
-		<!-- Status: bad -->
-		<!-- Issues: diagrams don't exist. Possible solutions include asking Laura about the next time Beth will be in; if it's not for a while, message her on Slack and work out a deadline within the next 2 weeks for her to send you said diagrams. -->
+		<!-- Status: bad right now, fine once KBD puts Beth's diagram in, good once have final diagram -->
+		<!-- Issues: basic floor diagram now exists! KBD needs to look it over and get back to Beth about making any additional ones, if we want one to label where office hours are or something. -->
 		<div class="home__floor-diagram">
 			<div class="home-diagram__title">Our Spaces: A Diagram</div>
 			<!--span>Because no one was born knowing where a common room is.</span-->
@@ -89,50 +88,51 @@
 			<div class="home-makerspace__title">Makerspace</div>
 			<div class="home-makerspace__content">
 				<div class="home-makerspace__text"><!-- Insert short description, a pic, and event preview, or whatever @Shane et al. find useful -->The Scholars’ Lab Makerspace is a place for tinkering and experimentation with technologies like desktop fabrication, physical computing, and augmented reality. Open to everyone, we specialize in applications and research questions in the humanities and arts.
-				Find things like 3-D printing, wearable technologies, physical computing, & more.</div>
+				Find things like 3-D printing, wearable technologies, physical computing, & more at our space <a href="#">in the middle of the Scholars' Lab Common Area</a>.</div>
 				<div class="home-makerspace__hours"><span>Staffed Hours:</span>Mondays: 1-7pm<br/>Tuesdays: 1-9pm<br/>Wednesday: 1-7pm<br/>Thursday: 1-9pm<br/>Friday: 1-5pm</div>
 				<div class="home-makerspace__cta"><a href="#">Makerspace Home</a></div>
 			</div>
 		</div>
 
 		<!-- 8: Spatial Tech -->
-		<!-- Status: bad -->
-		<!-- Issues: no idea what to write or where to get the information. Ask Amanda, and outsource this ASAP. It's not fair for this to get sidelined unintentionally, especially when it's such a big part of what we do. -->
-		<!-- NB: urgent issue, since is the one you least know how to solve. -->
+		<!-- Status: here = good, page itself = bad -->
+		<!-- Issues: KBD should change class name, page doesn't exist in final form (merging GIS + AR/VR/etc) yet -->
 		<div class="home__gis-corner">
 			<div class="home-gis__title">Spatial Technologies</div>
 			<div class="home-makesrpace__content">
-				<div><strong>Who should do this part?</strong>Insert short description, a pic, and event preview, or whatever @Will/Arin/Drew/Chris et al. find useful. GIS, VR/AR, 3-D modeling, other things?</div>
+				<div><strong>Experts at thinking about space+time.</strong>We've got experts in GIS and other mapping approaches (including our own Neatline project for telling stories that combine timelines+maps), cultural heritage informatics, augmented reality, virtual reality, 3D modeling, photogrammetry and scanning, aerial footage, and more (e.g. workshops, job opportunities, internships)Insert short description, a pic, and event preview, or whatever @Will/Arin/Drew/Chris et al. find useful here; update list of stuff supported above to be accurate.</div>
 			</div>
 		</div>
 
 		<!-- 9: Events -->
-		<!-- Status: (potentially) fine -->
-		<!-- Issues: statement likely needs rewording, and need to ask Zoe, Amanda, and/or Laura on how to actually get the events in here. Also: ask Laura about the 3-5 event categories so can get to work on colorizing. Will also need Zoe's help with tagging process at that point. -->
+		<!-- Status: fine (wording = good, event preview = bad) -->
+		<!-- Issues: need to ask Zoe, Amanda, and/or Laura on how to actually get the events in here. Also: ask Laura about the 3-5 event categories so can get to work on colorizing -->
 		<div class="home__events">
 			<div class="home-events__title">Events</div>
-			<div class="home-events__description">One-time or standing, hands-on workshops and symposiums, a quick intro or community group&mdash;whatever's your flavor, we probably have an event for it. Upcoming events below, or find the full list <a href="#" aria-label="Events page">here</a>.</div>
+			<div class="home-events__description">One-time or regular, hands-on workshops and discussion-rich symposia, a quick intro or community group&mdash;whatever your flavor, we probably have an event for it. Upcoming events below, or find the full list <a href="#" aria-label="Events page">here</a>.</div>
+			<!-- insert div previewing some events -->
 		</div>
 
 		<!-- 10: Learning Hub -->
-		<!-- Status: fine -->
-		<!-- Issues: page itself doesn't exist, you want to be the one to think through how these are presented and haven't gone through the materials yet. Possible solutions include: Ask Amanda to get together some quick sources on the text thing that she was going to do, then use those + Zoe's sources for networks + yours for CSS to shape what the common elements of these sections are. If there aren't that many common elements, just disclaim on the homepage that the learning process for these is different. Each author should also kind of make an estimate on how long it took them to learn something so that people know what they're in for. (Contextualized and disclaimed as individual experience, of course. Makes nice tie-in to link to the author's origin story, actually.) -->
+		<!-- Status: home = good, page itself = bad -->
+		<!-- Issues: page itself doesn't exist, you want to be the one to think through how these are presented and haven't gone through the materials yet. Use Amanda's text analysis + Zoe's network outlines + yours for CSS to shape what the common elements of these sections are. If there aren't that many common elements, just disclaim on the homepage that the learning process for these is different. Each author should also kind of make an estimate on how long it took them to learn something so that people know what they're in for. (Contextualized and disclaimed as individual experience, of course. Makes nice tie-in to link to the author's origin story, actually.) -->
 		<div class="home__learn">
 			<div class="home-learn__title">Learning Resources: Our Starter Kits</div>
-			<div class="home-learn__content">Insert description of why these exist, and why you might wanna use them. Maybe you don't even know you're interested in DH yet, or want to check out the basics of web design before you come talk to us. Curated by our in-house experts on each topic.</div>
+			<div class="home-learn__content">Starter kits contain example projects, novice-friendly explainers and tutorials, and other hints for dipping your toes into a DH method or figuring out what method you want to learn. Maybe you don't even know you're interested in DH yet, or want to check out the basics of mapping or web design before you come talk to us. Curated by our in-house experts on each topic.</div>
 			<div class="home-learn__links">
-				<a href="#">Links to a couple of topics here</a>
-				<div class="home-learn__link--1">topic 1 box</div>
-				<div class="home-learn__link--2">topic 1 box</div>
-				<div class="home-learn__link--3">topic 1 box</div>
+				<a href="#">Peruse all starter kits</a> or check out our most popular resources:
+				<div class="home-learn__link--1">What are networks and why might I care?</div>
+				<div class="home-learn__link--2">Sustainable web projects</div>
+				<div class="home-learn__link--3">Getting the text for your digital text project</div>
+				<div class="home-learn__link--4">You can also <a href="#">request a starter kit</a> around a topic we haven't covered yet.</div>
 			</div>
 		</div>
 
 		<!-- 11: Listserv -->
 		<!-- Status: fine -->
-		<!-- Issues: ask Laura/Amanda for listserv address and/or how to hook that up to email input; Zoe might also know stuff about the email part. Text needs rewording but isn't urgent. -->
+		<!-- Issues: ask Laura/Amanda for listserv address and/or how to hook that up to email input; Zoe might also know stuff about the email part. -->
 		<div class="home__listserv-prompt">
-			<div class="home-listserv__title" title="Also maybe dogs">Keep up with what we're doing. We'll only send you cool stuff.</div>
+			<div class="home-listserv__title" title="Also maybe dogs">Keep up with what we're doing. We'll only send you cool stuff about upcoming events and workshops, grants, and opportunities for collaboration or paid apprenticeships.</div>
 			<div class="home-listserv__content">
 				<div class="home-listserv__input">< insert input tag for entering email ></div>
 				<button class="home-listserv__btn">Keep me in the loop</button>
@@ -140,24 +140,23 @@
 		</div>
 
 		<!-- 12: People -->
-		<!-- Status: fine -->
-		<!-- Issues: page exists but need title here, text needs rewording -->
+		<!-- Status: good -->
 		<div class="home__people">
 			<div class="home-people__title">Our People</div>
-			<div class="home-people__content">Like we said, our digital humanities is people. Meet the ones who give this place its soul&mdash;and its abundance of dog memes.<br/><a href="#" aria-label="Link to 'People' page">Find them here.</a></div>
+			<div class="home-people__content">Like we said, our digital humanities is people. Meet the folks who give this place its soul&mdash;and its abundance of dog memes.<br/><a href="#" aria-label="Link to 'People' page">Find them here.</a></div>
 		</div>
 
 		<!-- 13: Origin Stories -->
-		<!-- Status: fine -->
-		<!-- Issues: page itself doesn't exist, description needs rewording. Neither is urgent since isn't integral to the structure of the site. -->
+		<!-- Status: here = good, page itself = bad -->
+		<!-- Issues: page itself doesn't exist -->
 		<div class="home__origin-stories">
 			<div class="home-origins__title">Origin Stories</div>
-			<div class="home-origins__content"><span>"How did you... end up in digital humanities?" </span>We've found that most of our answers are closer to a spiral than a straight line. Insert words about some of us started in history or English or econ and tumbled from there, and it's relevant because you the user might be nervous that everyone got there in a straight line. Give a couple of <a href="#">funny hints</a> about anecdotes that link to <a href="#">specific people's</a> pages. Check out the full round-up <a href="#">here</a>.</div>
+			<div class="home-origins__content"><span>"How did you... end up in digital humanities?" </span>Most of our answers are closer to a spiral than a straight line. Insert words about some of us started in history or English or econ and tumbled from there, and it's relevant because you the user might be nervous that everyone got there in a straight line. Give a couple of <a href="#">funny hints</a> about anecdotes that link to <a href="#">specific people's</a> pages. Check out the full round-up <a href="#">here</a>.</div>
 		</div>
 
 		<!-- 14: Blog -->
 		<!-- Status: bad -->
-		<!-- Issues: see: everything I wrote on the "Events" section (#9), and need to determine appropriate preview for posts. Tagging system also applies here and I can't remember whom I've talked about that with, so clear that up with Amanda and Laura ASAP. -->
+		<!-- Issues: needs rewording, need to determine appropriate preview for posts. Tagging system also applies here and I can't remember whom I've talked about that with, so clear that up with Amanda and Laura ASAP. -->
 		<div class="home__blog">
 			<div class="home-blog__title">Our Blog</div>
 			<div class="home-blog__content">Preview a few recent posts here. <a href="#" aria-label="Blog home">Check out</a> what we're writing about/thinking/doing.</div>
@@ -180,11 +179,10 @@
 		</div>
 
 		<!-- 17: Charter -->
-		<!-- Status: fine -->
-		<!-- Issues: description needs rewording, but otherwise is good. High priority because fix is so easy. Ask Amanda to do ASAP this week. -->
+		<!-- Status: good -->
 		<div class="home__charter-link">
 			<div class="home-charter__title">Our Charter</div>
-			<div class="home-charter__content">Link to <a href="#">charter</a>. Sets out mission and intention explicitly.</div>
+			<div class="home-charter__content">We do our best to put action into <a href="#">our values</a>, but we can always do better. Read about our mission and help us shape the digital humanities we want to see.</div>
 		</div>
 
 		<!-- 18: Colophon -->
@@ -192,7 +190,7 @@
 		<!-- Issues: need to figure out ASAP if this is still what we want this section called, and get history on why it's called that in the first place since this is usually a thing for books. It's important to have a credits section so I want to work out what goes in here and what the title is by the end of next week (2/5-2/9). -->
 		<div class="home__colophon">
 			<div class="home-colophon__title">Colophon</div>
-			<div class="home-colophon__content" title="Ingredients, one might say...">How the <s>sausage</s>, er, website, gets made. We're pretty proud of the <a href="#" aria-label="Colophon page">ingredients.</a></div>
+			<div class="home-colophon__content" title="Ingredients, one might say...">How the <s>sausage</s>, (er, website) gets made. We're pretty proud of the <a href="#" aria-label="Colophon page">ingredients.</a></div>
 		</div>
 	</div>
 
