--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ title: Home
 		<div class="home-diagram__title">Our Spaces: A Diagram</div>
 		<!--span>Because no one was born knowing where a common room is.</span-->
 		<div class="home-diagram__content">
-			<img src="img/dummy-floor-plan.png" height="300px" alt="Floor diagram of Scholars' Lab spaces" title="By the lovely Beth Mitchell">
+			<img src="assets/img/dummy-floor-plan.png" height="300px" alt="Floor diagram of Scholars' Lab spaces" title="By the lovely Beth Mitchell">
 		</div>
 	</div>
 	
