--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -28,7 +28,7 @@
 				<span>digital humanities</span>
 				<span>is people.</span>
 			</div-->
-			<div class="home-hero__text">At the Scholars' Lab, our most important digital humanities <span class="if-big"><br/></span>project is our community of scholars: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span> Come help us explore what that means—we'd love you to be a part of our community.</div>
+			<div class="home-hero__text">At the Scholars' Lab, our most important digital humanities project is our community of scholars: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span> Come help us explore what that means—we'd love you to be a part of our community.</div>
 		 <!-- "So let's explore what that means, because we'd love for you to be a part of it." -->
 		</div>
 
