Delete unused hero div, add line break b/f FAQ link

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -23,11 +23,6 @@
 
 	<div class="home-main-content">
 		<div class="home__hero">
-			<!--div class="home-hero__title" title="And our Soylent is not.">
-				<!--span>At the Scholars' Lab,</span><br/>
-				<span>digital humanities</span>
-				<span>is people.</span>
-			</div-->
 			<div class="home-hero__text">At the Scholars' Lab, our most important digital humanities project is our community of scholars: <span>mentors,</span> <span>learners,</span> <span>researchers,</span> <span>teachers,</span> <span>crafters & </span><span>makers,</span> <span>collaborators.</span> Come help us explore what that means—we'd love you to be a part of our community.</div>
 		 <!-- "So let's explore what that means, because we'd love for you to be a part of it." -->
 		</div>
@@ -42,7 +37,7 @@
 					<div><a href="#">How can the Scholars' Lab fit into my work?</a></div>
 					<div><a href="#">How does the Lab fit into the UVA Library?</a></div>
 				</div>
-				<div class="home-faq__cta">Find answers to these questions and more. <a href="#">FAQ Home</a></div>
+				<div class="home-faq__cta">Find answers to these questions and more.<br/><a href="#">FAQ Home</a></div>
 			</div>
 		</div>
 
