Add italics on FAQ CTA, line breaks in contact section

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -37,7 +37,7 @@
 					<div><a href="#">How can the Scholars' Lab fit into my work?</a></div>
 					<div><a href="#">How does the Lab fit into the UVA Library?</a></div>
 				</div>
-				<div class="home-faq__cta">Find answers to these questions and more.<br/><a href="#">FAQ Home</a></div>
+				<div class="home-faq__cta"><em>Find answers to these questions and more:</em><br/><a href="#">FAQ Home</a></div>
 			</div>
 		</div>
 
@@ -45,7 +45,7 @@
 
 		<div class="home__contact--1">
 			<div class="home-contact__title">Contact Us</div>
-			<div class="home-contact__cta">Curious about experimental & digital humanities research & teaching? <a href="#">Click here</a> to discover ways to join our community&mdash;absolutely zero DH experience needed.</div> <!-- should link to contact page -->
+			<div class="home-contact__cta">Curious about experimental & digital humanities research & teaching?<br/><br/><a href="#">Click here</a> to discover ways to join our community&mdash;absolutely zero DH experience needed.</div> <!-- should link to contact page -->
 		</div>
 
 		
