Remove old comment, change contact content name for accuracy

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -41,11 +41,9 @@
 			</div>
 		</div>
 
-		<!-- example: A round-up of some questions about the Scholars' Lab that we encounter most. What is digital humanities? How does the Scholars' Lab fit with what you're doing? How do we connect to the University of Virginia Library system? Find answers to that and more <a>here</a>. -->
-
 		<div class="home__contact--1">
 			<div class="home-contact__title">Contact Us</div>
-			<div class="home-contact__cta">Curious about experimental & digital humanities research & teaching?<br/><br/><a href="#">Click here</a> to discover ways to join our community&mdash;absolutely zero DH experience needed.</div> <!-- should link to contact page -->
+			<div class="home-contact__content">Curious about experimental & digital humanities research & teaching?<br/><br/><a href="#">Click here</a> to discover ways to join our community&mdash;absolutely zero DH experience needed.</div> <!-- should link to contact page -->
 		</div>
 
 		
