Add line breaks in section titles, + Typekit link

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -5,9 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Homepage</title>
+	<!-- Fonts: -->
+	<link rel="stylesheet" href="https://use.typekit.net/xpo3dxq.css">
 	<link href="https://fonts.googleapis.com/icon?family=Raleway:200,400,700,900|Montserrat:200,400,700|Oswald:200,400,600|Inconsolata:400,700" rel="stylesheet">
-	<!-- Good options: Supermercado+One (blocky/70s), Poiret+One (thin deco, 1 style), Righteous* (70s/geometric, 1 style), Prompt (wider Open Sans-ish, mannny styles), Quantico:400,700 (workbench-y, esp 700), Jockey+One (ibid, 1 style), Space+Mono:400,700 (Inconsolata competitor), Work+Sans (Open Sans w/ lil curls), Bungee+Inline -->
-	<!-- Notes: Righteous +1 w/ span, Jockey One too masculine, Quantico looks like football jerseys, -->
+	<!-- Style Sheet: -->
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -28,7 +29,7 @@
 		</div>
 
 		<div class="home__faq">
-			<div class="home-faq__title">Frequently Asked Questions</div>
+			<div class="home-faq__title">Frequently<br/>Asked<br/>Questions</div>
 			<div class="home-faq__content">
 				<div class="home-faq__subtitle">Curious about digital humanities and the Scholars' Lab? Check out answers to common questions:</div>
 				<div class="home-faq__questions">
@@ -48,8 +49,8 @@
 
 		
 		<div class="home__students">
-			<div class="home-students__title">Student Opportunities</div>
-			<div class="home-students__content">One of our primary missions is to support the work of emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students. We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA. From the innovative <a href="praxis.scholarslab.org">Praxis Program</a> to professionalization training for students on the DH job market, we're here to help whether you're looking to answer a specific call for applications or simply looking to discuss your research.</div>
+			<div class="home-students__title">Student<br/>Opportunities</div>
+			<div class="home-students__content">One of our primary missions is to support the work of emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students.<br/><br/>We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA. From the innovative <a href="praxis.scholarslab.org">Praxis Program</a> to professionalization training for students on the DH job market, we're here to help whether you're looking to answer a specific call for applications or simply looking to discuss your research.</div>
 			<div class="home-students__cta"><a href="#">Student Opportunities Home</a></div>
 		</div>
 		
@@ -61,7 +62,7 @@
 		</div>
 
 		<div class="home__floor-diagram">
-			<div class="home-diagram__title">Our Spaces: A Diagram</div>
+			<div class="home-diagram__title">Our Spaces:<br/>A Diagram</div>
 			<!--span>Because no one was born knowing where a common room is.</span-->
 			<div class="home-diagram__content">
 				<img src="img/dummy-floor-plan.png" height="300px" alt="Floor diagram of Scholars' Lab spaces" title="By the lovely Beth Mitchell">
@@ -91,7 +92,7 @@
 		</div>
 
 		<div class="home__learn">
-			<div class="home-learn__title">Learning Resources: Our Starter Kits</div>
+			<div class="home-learn__title">Learning Resources:<br/>Our Starter Kits</div>
 			<div class="home-learn__content">Starter kits contain example projects, novice-friendly explainers and tutorials, and other hints for dipping your toes into a DH method or figuring out what method you want to learn. Maybe you don't even know you're interested in DH yet, or want to check out the basics of mapping or web design before you come talk to us. Curated by our in-house experts on each topic.</div>
 			<div class="home-learn__links">
 				<a href="#">Peruse all starter kits</a> or check out our most popular resources:
