Minor wording changes

--- a/theme-testing/index.html
+++ b/theme-testing/index.html
@@ -34,7 +34,7 @@
 				<div class="home-faq__subtitle">Curious about digital humanities and the Scholars' Lab? Check out answers to common questions:</div>
 				<div class="home-faq__questions">
 					<div><a href="#">What is digital humanities (DH)?</a></div>
-					<div><a href="#">What is the Scholars' Lab??</a></div>
+					<div><a href="#">What is the Scholars' Lab?</a></div>
 					<div><a href="#">How can the Scholars' Lab fit into my work?</a></div>
 					<div><a href="#">How does the Lab fit into the UVA Library?</a></div>
 				</div>
@@ -50,8 +50,8 @@
 		
 		<div class="home__students">
 			<div class="home-students__title">Student<br/>Opportunities</div>
-			<div class="home-students__content">One of our primary missions is to support the work of emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students.<br/><br/>We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA. From the innovative <a href="praxis.scholarslab.org">Praxis Program</a> to professionalization training for students on the DH job market, we're here to help whether you're looking to answer a specific call for applications or simply looking to discuss your research.</div>
-			<div class="home-students__cta"><a href="#">Student Opportunities Home</a></div>
+			<div class="home-students__content">One of our primary missions is to support the work of emerging scholars and digital humanities practitioners&mdash;particularly UVa graduate students.<br/><br/>We offer a variety of fellowships and opportunities to this end, which collectively aim to support graduate students during the full measure of their time at UVA.<br/><br/>From the innovative <a href="praxis.scholarslab.org">Praxis Program</a> to professionalization training for students on the DH job market, we're here to help whether you're looking to answer a specific call for applications or simply looking to discuss your research.</div>
+			<div class="home-students__cta"><a href="#">See All<!--Student Opportunities Home--></a></div>
 		</div>
 		
 
